[package]
name = "auth"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
futures = "0.3.1"
sanitize-filename = "0.2"
rand = ""
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = true
